[package]
name = "oqt"
description = "For optimal query tree"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
big_s = "1.0.2"
itertools = "0.8.2"
maplit = "1.0.2"
rand = "0.7.2"
slice-group-by = "0.2.6"

[dependencies.sdset]
version = "0.3.6"
git = "https://github.com/Kerollmops/sdset"
branch = "intersection-by-key"
